--- a/playground/jquery.html
+++ b/playground/jquery.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>DevExtreme jQuery Example</title>
 
-    <link rel="stylesheet" type="text/css" href="../artifacts/css/dx.common.css"/>
+    <link rel="stylesheet" type="text/css" href="../artifacts/css/dx.common.css" />
 
-    <link rel="stylesheet" type="text/css" href="../artifacts/css/dx.light.css"/>
+    <link rel="stylesheet" type="text/css" href="../artifacts/css/dx.light.css" />
 
     <script type="text/javascript" src="../artifacts/js/jquery.js"></script>
 
@@ -25,15 +26,38 @@
 
     <script type="text/javascript" src="../artifacts/js/dx.all.debug.js" charset="utf-8"></script>
 </head>
+
 <body>
-    <div id="button"></div>
+    <div id="scheduler"></div>
     <script>
-        $(function() {
-            $("#button").dxButton({
-                text: 'Click me!',
-                onClick: function() { alert("clicked"); }
+        $(function () {
+            $(function () {
+                var data = [{
+                    text: "Website Re-Design Plan",
+                    startDate: new Date(2017, 4, 22, 9, 30),
+                    endDate: new Date(2017, 4, 22, 11, 30),
+                    disabled: true
+                }, {
+                    text: "Book Flights to San Fran for Sales Trip",
+                    startDate: new Date(2017, 4, 22, 12, 0),
+                    endDate: new Date(2017, 4, 22, 13, 0),
+                }];
+
+                $("#scheduler").dxScheduler({
+                    dataSource: data,
+                    views: ["week", "month"],
+                    currentView: "week",
+                    currentDate: new Date(2017, 4, 25),
+                    startDayHour: 9,
+                    // height: 600,
+                    editing: {
+                        allowUpdating: false
+                    }
+                }).dxScheduler("instance");
             });
         });
+
     </script>
 </body>
+
 </html>
