--- a/playground/jquery.html
+++ b/playground/jquery.html
@@ -25,7 +25,7 @@
 
     <script type="text/javascript" src="../artifacts/js/dx.all.debug.js" charset="utf-8"></script>
     <!-- RENOVATION -->
-    <!-- <script type="text/javascript" src="../artifacts/js-renovation/" charset="utf-8"></script> -->
+    <!-- <script type="text/javascript" src="../artifacts/js-renovation/dx.all.debug.js" charset="utf-8"></script> -->
 </head>
 <body>
     <div id="button"></div>
